--- a/apps/quant-engine/package.json
+++ b/apps/quant-engine/package.json
@@ -23,7 +23,8 @@
         "@types/uuid": "9.0.7",
         "@types/ws": "8.5.10",
         "tsx": "4.7.0",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "vitest": "^4.0.16"
     },
     "engines": {
         "node": ">=20.0.0"
