--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,32 +1,17 @@
-# TraderMind API Gateway Dockerfile
-FROM node:20-alpine AS builder
+
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy workspace files
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/api-gateway ./apps/api-gateway
-COPY packages ./packages
+COPY package*.json ./
+COPY tsconfig.json ./
 
-# Install pnpm and dependencies
-RUN npm install -g pnpm && pnpm install --frozen-lockfile
+RUN npm ci
 
-# Build
-WORKDIR /app/apps/api-gateway
-RUN pnpm run build
+COPY src ./src
 
-# Production image
-FROM node:20-alpine AS runner
-
-WORKDIR /app
-
-COPY --from=builder /app/apps/api-gateway/dist ./dist
-COPY --from=builder /app/apps/api-gateway/package.json ./
-COPY --from=builder /app/node_modules ./node_modules
-
-ENV NODE_ENV=production
-ENV PORT=3000
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["node", "dist/index.js"]
+CMD ["npm", "run", "start"]
