--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,35 +1,20 @@
-# TraderMind Frontend Dockerfile
-FROM node:20-alpine AS builder
+
+# Stage 1: Build
+FROM node:18-alpine as build
 
 WORKDIR /app
 
-# Copy workspace files
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/frontend ./apps/frontend
-COPY packages ./packages
+COPY package*.json ./
+RUN npm ci
 
-# Install pnpm and dependencies
-RUN npm install -g pnpm && pnpm install --frozen-lockfile
+COPY . .
+RUN npm run build
 
-# Build
-WORKDIR /app/apps/frontend
-RUN pnpm run build
+# Stage 2: Serve
+FROM nginx:alpine
 
-# Production image - nginx
-FROM nginx:alpine AS runner
-
-# Copy built assets
-COPY --from=builder /app/apps/frontend/dist /usr/share/nginx/html
-
-# Nginx configuration for SPA
-RUN echo 'server { \
-    listen 80; \
-    location / { \
-    root /usr/share/nginx/html; \
-    index index.html; \
-    try_files $uri $uri/ /index.html; \
-    } \
-    }' > /etc/nginx/conf.d/default.conf
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
