feat: Establish production deployment infrastructure with Docker Compose, Nginx, and updated build configurations.

--- a/backend/quant-engine/Dockerfile
+++ b/backend/quant-engine/Dockerfile
@@ -5,14 +5,14 @@ WORKDIR /app
 
 # Copy workspace files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/quant-engine ./apps/quant-engine
+COPY backend/quant-engine ./backend/quant-engine
 COPY packages ./packages
 
 # Install pnpm and dependencies
 RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
 # Build
-WORKDIR /app/apps/quant-engine
+WORKDIR /app/backend/quant-engine
 RUN pnpm run build
 
 # Production image
@@ -20,8 +20,8 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-COPY --from=builder /app/apps/quant-engine/dist ./dist
-COPY --from=builder /app/apps/quant-engine/package.json ./
+COPY --from=builder /app/backend/quant-engine/dist ./dist
+COPY --from=builder /app/backend/quant-engine/package.json ./
 COPY --from=builder /app/node_modules ./node_modules
 
 ENV NODE_ENV=production
