--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -7,7 +7,8 @@
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
-        "lint": "eslint . --ext ts"
+        "lint": "eslint . --ext ts",
+        "test": "vitest run"
     },
     "dependencies": {
         "@supabase/supabase-js": "2.39.3",
