feat: introduce new dashboard layout and pages for statistics, sessions, and settings

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,10 @@
         "allowImportingTsExtensions": true,
         "noEmit": true,
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
+        "types": [
+            "vite/client"
+        ]
     },
     "include": [
         "src"
