--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,15 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.89.0",
         "@tanstack/react-query": "^5.90.14",
-        "framer-motion": "^11.0.3",
         "clsx": "^2.1.1",
-        "tailwind-merge": "^2.2.1",
+        "framer-motion": "^11.0.3",
         "lucide-react": "^0.562.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "^7.11.0",
-        "recharts": "2.12.0",
+        "recharts": "^2.12.0",
         "socket.io-client": "4.7.4",
+        "tailwind-merge": "^2.2.1",
         "zustand": "4.5.0"
     },
     "devDependencies": {
