--- a/backend/api-gateway/Dockerfile
+++ b/backend/api-gateway/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /app
 COPY --from=builder /app/backend/api-gateway/dist ./dist
 COPY --from=builder /app/backend/api-gateway/package.json ./
 COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/packages ./packages
 
 EXPOSE 3000
 CMD ["node", "dist/index.js"]
