refactor: remove obsolete test files and improve Dockerfile configurations
- Deleted WebSocketClient, crypto, FeatureBuilder, MarketDataService, QuantEngine, RiskGuard, Simulation, and TradingPipeline test scripts to streamline the codebase.
- Updated Dockerfiles for api-gateway and quant-engine to enhance build efficiency and remove unnecessary development dependencies.
- Added production optimizations in Dockerfiles, including user permissions and environment variable settings.

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,3 +12,13 @@ __pycache__
 # Exclude large models from build context
 backend/ai-layer/models/*.gguf
 **/*.gguf
+
+# Tests and Source Maps
+**/*.test.ts
+**/*.spec.ts
+**/*.map
+tests/
+__tests__/
+npm-debug.log
+yarn-error.log
+pnpm-debug.log
