feat: Add comprehensive error handling and edge case tests
- Implemented a new error handling test suite in Cypress to cover network errors, error boundaries, and edge cases.
- Created a session flow test suite to validate trading session creation, joining, and lifecycle.
- Enhanced the App component with ErrorBoundary and specialized error boundaries for dashboard and trading components.
- Introduced a new ErrorBoundary component to gracefully handle errors in React applications.
- Updated Nginx configuration for improved WebSocket handling and health check endpoint.
- Consolidated trading core utilities into a shared module to eliminate code duplication.
- Refactored TypeScript configuration for better module resolution and compatibility.

--- a/packages/risk-rules/tsconfig.json
+++ b/packages/risk-rules/tsconfig.json
@@ -5,12 +5,7 @@
         "rootDir": "src",
         "declaration": true,
         "declarationMap": true,
-        "composite": true,
-        "paths": {
-            "@tradermind/schemas": [
-                "../schemas/src/index.ts"
-            ]
-        }
+        "composite": true
     },
     "include": [
         "src"
