--- a/Dockerfile.api-gateway
+++ b/Dockerfile.api-gateway
@@ -3,8 +3,8 @@ FROM node:20-alpine
 WORKDIR /app
 RUN corepack enable
 
-# FORCE NEW BUILD LAYER - v4
-ARG CACHEBUST=4
+# FORCE NEW BUILD LAYER - v5
+ARG CACHEBUST=5
 
 COPY . .
 
@@ -18,5 +18,9 @@ RUN pnpm run --filter @tradermind/schemas --filter @tradermind/shared-utils --fi
 RUN pnpm run --filter @tradermind/api-gateway build
 
 WORKDIR /app/backend/api-gateway
-EXPOSE 8080
+
+# Standardized port configuration - matches docker-compose and index.ts
+ENV PORT=3000
+EXPOSE 3000
+
 CMD ["pnpm", "start"]
