--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -11,7 +11,9 @@
         "test": "vitest run"
     },
     "dependencies": {
+        "@sentry/node": "^8.0.0",
         "@supabase/supabase-js": "2.39.3",
+        "cookie-parser": "^1.4.6",
         "cors": "2.8.5",
         "dotenv": "^17.2.3",
         "eventemitter3": "5.0.1",
@@ -27,6 +29,7 @@
         "zod": "3.22.4"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.7",
         "@types/cors": "2.8.17",
         "@types/express": "4.17.21",
         "@types/node": "20.11.5",
