--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,10 @@
+# HTTP server - redirects to HTTPS in production
 server {
     listen 80;
-    server_name localhost; # Change this to your domain/IP in production
+    server_name localhost;
 
-    # Redirect HTTP to HTTPS (Uncomment below once you set up certbot/SSL)
+    # Redirect HTTP to HTTPS in production
+    # Uncomment below once SSL certificates are configured
     # return 301 https://$host$request_uri;
 
     location / {
@@ -15,11 +17,65 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket specific timeouts
+        proxy_read_timeout 86400;
+        proxy_send_timeout 86400;
     }
 
-    # Optional: Health check
+    # Health check endpoint
     location /health {
         access_log off;
         return 200 'healthy';
+        add_header Content-Type text/plain;
     }
 }
+
+# HTTPS server - uncomment after configuring SSL certificates
+# server {
+#     listen 443 ssl http2;
+#     server_name your-domain.com;
+#
+#     # SSL certificates (use certbot to generate)
+#     ssl_certificate /etc/nginx/certs/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/certs/privkey.pem;
+#
+#     # SSL security settings
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 1d;
+#     ssl_session_tickets off;
+#
+#     # HSTS (uncomment after confirming SSL works)
+#     # add_header Strict-Transport-Security "max-age=63072000" always;
+#
+#     # OCSP Stapling
+#     ssl_stapling on;
+#     ssl_stapling_verify on;
+#     resolver 8.8.8.8 8.8.4.4 valid=300s;
+#     resolver_timeout 5s;
+#
+#     location / {
+#         proxy_pass http://api-gateway:3000;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         
+#         # WebSocket specific timeouts
+#         proxy_read_timeout 86400;
+#         proxy_send_timeout 86400;
+#     }
+#
+#     location /health {
+#         access_log off;
+#         return 200 'healthy';
+#         add_header Content-Type text/plain;
+#     }
+# }
