fix: add .js extensions to imports for NodeNext module resolution
- packages/shared-utils/src/index.ts: Add .js extension to trading-core imports
- Dockerfile.quant-engine: Use explicit package filters for consistency with api-gateway

Fixes deployment build failures caused by TS2835 errors

--- a/Dockerfile.quant-engine
+++ b/Dockerfile.quant-engine
@@ -10,7 +10,7 @@ COPY . .
 RUN pnpm install --frozen-lockfile
 
 # 1. Build all shared packages first
-RUN pnpm run --filter "./packages/**" build
+RUN pnpm run --filter @tradermind/schemas --filter @tradermind/shared-utils --filter @tradermind/risk-rules build
 
 # 2. Build Quant Engine ONLY
 RUN pnpm run --filter @tradermind/quant-engine build
