🚀 Major: Remove AI Layer - Pure Quantitative Trading Engine v2.0
REMOVED:
- Completely removed AI layer folder (moved to backup)
- Removed Dockerfile.ai-layer
- Removed AIServiceAdapter.ts
- Removed ai-layer service from railway.toml, docker-compose files
- Removed AI_LAYER_URL from .env and startup checks
- Removed AdminAIMonitor page

ADDED:
- Strategies.ts: 10 comprehensive trading strategies
  - RSI Divergence, EMA Cross Momentum, Bollinger Squeeze
  - MACD Histogram, Stochastic, Volatility Spike
  - Support/Resistance, ADX Trend, Multi-Timeframe
  - Adaptive (learns from database)
- AdminQuantMonitor.tsx: Real-time quant engine monitoring
- Database learning capability for adaptive trading

UPDATED:
- QuantEngine.ts: Pure quantitative engine without AI dependency
  - 10 active strategies
  - Database learning from past trades
  - Win rate tracking per market
- Markets restricted to Jump and Volatility indices ONLY
  - Volatility: R_10, R_25, R_50, R_75, R_100
  - Jump: JD_10, JD_25, JD_50, JD_75, JD_100
- ManualTrade.tsx: Updated market list
- Navigation: AI Monitor → Quant Monitor
- API docs: Updated description and version to 2.0.0

This is a production-ready, lightweight trading engine focused on
quantitative strategies with no AI model dependencies.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,27 +8,28 @@ services:
     build:
       context: .
       dockerfile: backend/api-gateway/Dockerfile
-    # ports:
-    #   - "127.0.0.1:3000:3000" # DISABLED: Internal only. Access via Nginx.
     expose:
       - "3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
       - REDIS_URL=redis://redis:6379
-      - AI_LAYER_URL=http://ai-layer:8001
       - CORS_ORIGIN=${CORS_ORIGIN:-*} # Set this to your frontend URL in .env
     env_file:
       - .env
     depends_on:
       - redis
-      - ai-layer
     networks:
       - tradermind-prod
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # ==========================================================================
-  # QUANT ENGINE (Worker)
+  # QUANT ENGINE (Worker) - Pure Quantitative Trading
   # ==========================================================================
   quant-engine:
     build:
@@ -40,22 +41,6 @@ services:
       - .env
     depends_on:
       - redis
-      - ai-layer
-    networks:
-      - tradermind-prod
-    restart: unless-stopped
-
-  # ==========================================================================
-  # AI LAYER
-  # ==========================================================================
-  ai-layer:
-    build:
-      context: ./backend/ai-layer
-      dockerfile: Dockerfile
-    expose:
-      - "8001" # Internal only
-    environment:
-      - PORT=8001
     networks:
       - tradermind-prod
     restart: unless-stopped
@@ -71,6 +56,11 @@ services:
     networks:
       - tradermind-prod
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # ==========================================================================
   # NGINX (Reverse Proxy)
