--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 # TraderMind Docker Compose
 # Development environment configuration
+# NOTE: AI Layer has been removed - Pure Quantitative Trading Engine
 
 version: "3.9"
 
@@ -31,18 +32,17 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - REDIS_URL=redis://redis:6379
-      - AI_LAYER_URL=http://ai-layer:8001
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - FRONTEND_URL=http://localhost:5173
     depends_on:
       - redis
-      - ai-layer
     networks:
       - tradermind
 
   # ==========================================================================
-  # QUANT ENGINE
+  # QUANT ENGINE - Pure Quantitative Trading
+  # 10 Trading Strategies | Database Learning | Jump & Volatility Indices
   # ==========================================================================
   quant-engine:
     build:
@@ -54,30 +54,12 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - REDIS_URL=redis://redis:6379
-      - AI_LAYER_URL=http://ai-layer:8001
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
     depends_on:
       - redis
-      - ai-layer
     networks:
       - tradermind
-
-  # ==========================================================================
-  # AI LAYER (Python FastAPI)
-  # SECURITY: Isolated network, no DB access
-  # ==========================================================================
-  ai-layer:
-    build:
-      context: .
-      dockerfile: Dockerfile.ai-layer
-    ports:
-      - "8001:8001"
-    environment:
-      - PORT=8001
-    networks:
-      - tradermind
-    # No database or redis access - isolated by design
 
   # ==========================================================================
   # INFRASTRUCTURE
