--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,74 @@
+# ==============================================================================
 # TraderMind Environment Variables Template
-# Copy this to .env and fill in your values
+# ==============================================================================
+# SECURITY NOTICE: Never commit a .env file with real values to version control!
+# Copy this file to .env and fill in your values.
+#
+# Generate secure secrets with: openssl rand -hex 32
+# ==============================================================================
+
+
+# ==============================================================================
+# REQUIRED VARIABLES (Service will fail to start without these)
+# ==============================================================================
 
 # SUPABASE CONFIGURATION
+# Get these from: https://app.supabase.com/project/YOUR_PROJECT/settings/api
 SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key-here
 
-# DERIV CONFIGURATION
+# DERIV CONFIGURATION  
+# Get your app ID from: https://api.deriv.com/app-registration
+# DERIV_APP_ID is REQUIRED - service will throw if missing
 DERIV_APP_ID=YOUR_DERIV_APP_ID
-DERIV_API_TOKEN=your-deriv-api-token-here
 
-# SECURITY (REQUIRED - Generate with: openssl rand -hex 32)
+# SECURITY SECRETS (REQUIRED - Generate with: openssl rand -hex 32)
+# SESSION_SECRET: Used for JWT signing - minimum 64 hex characters
 SESSION_SECRET=generate-a-64-character-hex-string-here
+
+# DERIV_TOKEN_KEY: Used for AES-256-GCM encryption of Deriv tokens at rest
 DERIV_TOKEN_KEY=generate-a-64-character-hex-string-here
 
-# SERVICE URLs (Inside Docker)
-# These are handled by docker-compose, but useful for local dev
-API_GATEWAY_URL=http://localhost:3000
-AI_LAYER_URL=http://localhost:8001
-FRONTEND_URL=http://localhost:5173
-OLLAMA_URL=http://localhost:11434
+# CORS CONFIGURATION
+# In production, set this to your frontend domain (no trailing slash)
+# Example: https://tradermind.example.com
+CORS_ORIGIN=http://localhost:5173
 
-# DATABASE
+
+# ==============================================================================
+# INFRASTRUCTURE
+# ==============================================================================
+
+# Redis URL for session storage and rate limiting
+# Format: redis://[username:password@]host:port[/db]
 REDIS_URL=redis://redis:6379
 
-# CORS
-CORS_ORIGIN=http://localhost:5173
+# Service URLs (Defaults work for Docker Compose)
+API_GATEWAY_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
+
+
+# ==============================================================================
+# OPTIONAL VARIABLES
+# ==============================================================================
+
+# Environment mode: development | production | test
+NODE_ENV=production
+
+# Sentry DSN for error tracking (optional but recommended for production)
+# Get from: https://sentry.io/settings/YOUR_ORG/projects/YOUR_PROJECT/keys/
+# SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
+
+# Enable legacy API routes (default: false in production)
+# WARNING: Only enable for backward compatibility during migration
+# ENABLE_LEGACY_ROUTES=false
+
+
+# ==============================================================================
+# DEPRECATED / REMOVED VARIABLES
+# ==============================================================================
+# The following variables are no longer used:
+# - DERIV_API_TOKEN: Tokens are now per-user, stored encrypted in database
+# - AI_LAYER_URL: AI layer removed from architecture
+# - OLLAMA_URL: Local LLM support removed
