--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
             }
         ],
         "@typescript-eslint/strict-boolean-expressions": "warn",
-        "no-console": "warn"
+        "no-console": "error"
     },
     "env": {
         "node": true,
