--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.89.0",
         "@tanstack/react-query": "^5.90.14",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^11.0.3",
@@ -22,6 +23,7 @@
         "recharts": "^2.12.0",
         "socket.io-client": "4.7.4",
         "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7",
         "zustand": "4.5.0"
     },
     "devDependencies": {
