--- a/Dockerfile.api-gateway
+++ b/Dockerfile.api-gateway
@@ -9,6 +9,7 @@ RUN apk add --no-cache curl
 # FORCE NEW BUILD LAYER - v7
 ARG CACHEBUST=7
 
+COPY pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY . .
 
 RUN pnpm install --frozen-lockfile
