--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -34,6 +34,9 @@
         "@types/express": "4.17.21",
         "@types/node": "20.11.5",
         "@types/ws": "8.5.10",
+        "@typescript-eslint/eslint-plugin": "^8.52.0",
+        "@typescript-eslint/parser": "^8.52.0",
+        "eslint": "^9.39.2",
         "tsx": "4.7.0",
         "typescript": "5.3.3",
         "vitest": "^4.0.16"
