--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,12 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/react": "18.2.48",
         "@types/react-dom": "18.2.18",
+        "@typescript-eslint/eslint-plugin": "^8.52.0",
+        "@typescript-eslint/parser": "^8.52.0",
         "@vitejs/plugin-react": "4.2.1",
         "autoprefixer": "10.4.17",
         "cypress": "^15.8.1",
+        "eslint": "^9.39.2",
         "jsdom": "^27.4.0",
         "postcss": "8.4.33",
         "tailwindcss": "3.4.1",
