--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "pnpm": ">=8.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^9.39.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
