feat: Refactor API calls to use fetchWithAuth for improved authentication handling
- Updated Chat component to utilize fetchWithAuth for sending messages.
- Changed Dashboard to fetch user summary stats instead of general stats.
- Modified LiveSession to use a consistent primary color for positive PnL.
- Refactored Sessions component to use fetchWithAuth for session data retrieval and mutations.
- Enhanced Statistics to dynamically adjust pie chart opacity based on data distribution.
- Updated AdminLogs to standardize success message color.
- Adjusted AdminUsers to reflect role changes with appropriate styling.
- Removed deprecated useThemeStore and its associated logic.
- Updated package.json to require pnpm version 9.0.0 or higher.
- Modified Supabase configuration to comment out unused storage features.
- Created migration scripts for user management and account metadata.
- Documented critical fixes and improvements in FIXES_APPLIED.md.

--- a/.env.example
+++ b/.env.example
@@ -66,9 +66,14 @@ NODE_ENV=production
 
 
 # ==============================================================================
+# OPTIONAL AI LAYER (disabled by default)
+# ==============================================================================
+# ENABLE_AI_LAYER=true
+# AI_LAYER_URL=http://localhost:8001
+
+# ==============================================================================
 # DEPRECATED / REMOVED VARIABLES
 # ==============================================================================
 # The following variables are no longer used:
 # - DERIV_API_TOKEN: Tokens are now per-user, stored encrypted in database
-# - AI_LAYER_URL: AI layer removed from architecture
 # - OLLAMA_URL: Local LLM support removed
