--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   ],
   "author": "",
   "license": "UNLICENSED",
+  "packageManager": "pnpm@9.15.2",
   "engines": {
     "node": ">=20.0.0",
-    "pnpm": ">=8.0.0"
+    "pnpm": ">=9.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.52.0",
