Fix critical TypeScript errors and production deployment issues
- Fixed stats.ts syntax error (malformed aiStatus declaration)
- Fixed frontend Sentry ErrorBoundary type compatibility
- Fixed users.ts parameter validation (TypeScript strict mode)
- Fixed RedisClient.ts Redis import types and callback parameters
- Removed AI layer calls from backend routes (chat, stats, users)
- Fixed ESM imports (require to import for ws package)
- Updated Dockerfiles to use pnpm instead of npm
- Added missing VITE_ environment variables
- Created supabase/seed.sql with demo data
- Implemented Redis REDIS_URL support with memory fallback
- Removed auto-start demo sessions from quant-engine
- Updated documentation (removed AI layer references)
- Removed npm package-lock.json files (pnpm monorepo)
- Added comprehensive audit reports and test results

All TypeScript compilation passing (0 errors)
Production deployment verified on Railway
Development environment fully operational

--- a/.env.example
+++ b/.env.example
@@ -50,15 +50,36 @@ FRONTEND_URL=http://localhost:5173
 
 
 # ==============================================================================
+# FRONTEND VARIABLES (VITE)
+# ==============================================================================
+# Frontend env vars must be prefixed with VITE_ to be accessible
+
+# Supabase (Frontend needs anon key, not service role key)
+VITE_SUPABASE_URL=${SUPABASE_URL}
+VITE_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+
+# API Gateway URL (optional, defaults to window.location.origin/api)
+VITE_API_GATEWAY_URL=http://localhost:3000
+
+# Sentry for frontend error tracking (optional)
+VITE_SENTRY_DSN=https://YOUR_DSN@sentry.io/YOUR_PROJECT_ID
+
+
+# ==============================================================================
 # OPTIONAL VARIABLES
 # ==============================================================================
 
 # Environment mode: development | production | test
 NODE_ENV=production
 
-# Sentry DSN for error tracking (optional but recommended for production)
+# Sentry DSN for error tracking (recommended for production)
 # Get from: https://sentry.io/settings/YOUR_ORG/projects/YOUR_PROJECT/keys/
-# SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
+# Backend (API Gateway)
+SENTRY_DSN=https://YOUR_DSN@sentry.io/YOUR_PROJECT_ID
+SENTRY_ENVIRONMENT=production
+
+# Frontend (React/Vite) - must be prefixed with VITE_
+VITE_SENTRY_DSN=https://YOUR_DSN@sentry.io/YOUR_PROJECT_ID
 
 # Enable legacy API routes (default: false in production)
 # WARNING: Only enable for backward compatibility during migration
@@ -66,10 +87,11 @@ NODE_ENV=production
 
 
 # ==============================================================================
-# OPTIONAL AI LAYER (disabled by default)
+# AI LAYER (REMOVED - no longer part of the codebase)
 # ==============================================================================
-# ENABLE_AI_LAYER=true
-# AI_LAYER_URL=http://localhost:8001
+# The AI layer has been removed. These variables are deprecated:
+# ENABLE_AI_LAYER=true     # DEPRECATED
+# AI_LAYER_URL=...         # DEPRECATED
 
 # ==============================================================================
 # DEPRECATED / REMOVED VARIABLES
