--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
   },
+  "pnpm": {
+    "overrides": {
+      "qs": ">=6.14.1",
+      "esbuild": ">=0.25.0"
+    }
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
