--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,19 @@ on:
     branches: [main, master]
 
 jobs:
-  typescript-checks:
-    name: TypeScript Checks (Lint, Typecheck, Test)
+  # ==========================================================================
+  # SECURITY AUDIT (runs first, fails fast on vulnerabilities)
+  # ==========================================================================
+  security-audit:
+    name: Security Audit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -19,47 +27,42 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run security audit
+        run: pnpm audit --recursive --audit-level=moderate
+
+  # ==========================================================================
+  # TYPESCRIPT CHECKS
+  # ==========================================================================
+  typescript-checks:
+    name: TypeScript Checks (Lint, Typecheck, Test)
+    runs-on: ubuntu-latest
+    needs: security-audit
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Install pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 8
+          version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Lint
-        run: pnpm lint
+        run: pnpm -r run lint
 
       - name: Typecheck
-        run: pnpm typecheck
+        run: pnpm -r exec tsc --noEmit
 
       - name: Test
         run: pnpm -r run test --if-present
 
-  python-checks:
-    name: Python Checks (Lint, Test)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.9"
-          cache: "pip"
-
-      - name: Install dependencies
-        run: |
-          cd apps/ai-layer
-          pip install -r requirements.txt
-          pip install flake8 pytest
-
-      - name: Lint
-        run: |
-          cd apps/ai-layer
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-
-      - name: Test
-        run: |
-          cd apps/ai-layer
-          pytest --if-present
