--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -17,15 +17,15 @@
         "cors": "2.8.5",
         "dotenv": "^17.2.3",
         "eventemitter3": "5.0.1",
-        "express": "4.18.2",
+        "express": "^4.21.0",
         "helmet": "7.1.0",
         "ioredis": "5.3.2",
         "jose": "5.2.0",
         "pino": "8.17.2",
         "pino-pretty": "10.3.1",
-        "socket.io": "4.7.4",
-        "socket.io-client": "4.7.4",
-        "ws": "8.16.0",
+        "socket.io": "^4.8.3",
+        "socket.io-client": "^4.8.3",
+        "ws": "^8.18.0",
         "zod": "3.22.4"
     },
     "devDependencies": {
@@ -37,7 +37,7 @@
         "@typescript-eslint/eslint-plugin": "^8.52.0",
         "@typescript-eslint/parser": "^8.52.0",
         "eslint": "^9.39.2",
-        "tsx": "4.7.0",
+        "tsx": "^4.21.0",
         "typescript": "5.3.3",
         "vitest": "^4.0.16"
     },
