--- a/backend/quant-engine/package.json
+++ b/backend/quant-engine/package.json
@@ -16,13 +16,13 @@
         "ioredis": "5.3.2",
         "pino": "8.17.2",
         "uuid": "9.0.0",
-        "ws": "8.16.0"
+        "ws": "^8.18.0"
     },
     "devDependencies": {
         "@types/node": "20.11.5",
         "@types/uuid": "9.0.7",
         "@types/ws": "8.5.10",
-        "tsx": "4.7.0",
+        "tsx": "^4.21.0",
         "typescript": "5.3.3",
         "vitest": "^4.0.16"
     },
