--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,14 @@ services:
   # ==========================================================================
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: frontend/Dockerfile
     ports:
       - "5173:80"
+    environment:
+      - VITE_SUPABASE_URL=${SUPABASE_URL}
+      - VITE_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - VITE_API_GATEWAY_URL=http://localhost:3000
     depends_on:
       - api-gateway
     networks:
@@ -33,7 +37,12 @@ services:
       - PORT=3000
       - REDIS_URL=redis://redis:6379
       - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - SESSION_SECRET=${SESSION_SECRET}
+      - DERIV_TOKEN_KEY=${DERIV_TOKEN_KEY}
+      - DERIV_APP_ID=${DERIV_APP_ID}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:5173}
       - FRONTEND_URL=http://localhost:5173
     depends_on:
       - redis
@@ -56,6 +65,8 @@ services:
       - REDIS_URL=redis://redis:6379
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - DERIV_APP_ID=${DERIV_APP_ID}
+      - DERIV_TOKEN_KEY=${DERIV_TOKEN_KEY}
     depends_on:
       - redis
     networks:
