--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,17 +4,29 @@ FROM node:20-alpine as build
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm ci
+# Install pnpm
+RUN npm install -g pnpm@8
 
-COPY . .
-RUN npm run build
+# Copy workspace files
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY frontend/package.json ./frontend/
+COPY packages ./packages
+
+# Install dependencies
+RUN pnpm install --frozen-lockfile
+
+# Copy frontend source
+COPY frontend ./frontend
+
+# Build frontend
+WORKDIR /app/frontend
+RUN pnpm run build
 
 # Stage 2: Serve
 FROM nginx:alpine
 
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/frontend/dist /usr/share/nginx/html
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
