--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "lint": "eslint . --ext ts,tsx"
     },
     "dependencies": {
+        "@sentry/react": "^8.0.0",
         "@supabase/supabase-js": "^2.89.0",
         "@tanstack/react-query": "^5.90.14",
         "class-variance-authority": "^0.7.1",
@@ -19,9 +20,9 @@
         "lucide-react": "^0.562.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-router-dom": "^7.11.0",
+        "react-router-dom": "^7.12.0",
         "recharts": "^2.12.0",
-        "socket.io-client": "4.7.4",
+        "socket.io-client": "^4.8.3",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "zustand": "4.5.0"
@@ -42,7 +43,7 @@
         "postcss": "8.4.33",
         "tailwindcss": "3.4.1",
         "typescript": "5.3.3",
-        "vite": "5.0.12",
+        "vite": "^5.4.20",
         "vitest": "^4.0.16"
     },
     "engines": {
