fix(rate-limiter): throttle Redis errors and add Railway Redis setup
- Throttle Redis error logs from 3600+/hour to max 60/hour
- Add graceful fallback to in-memory rate limiting when Redis unavailable
- Implement smart retry strategy with exponential backoff
- Add comprehensive Redis setup documentation for Railway
- Include visual guide and interactive setup script
- Update README with Redis configuration instructions

Fixes continuous Redis connection errors in production logs
Resolves #railway-redis-errors

--- a/railway.toml
+++ b/railway.toml
@@ -5,3 +5,7 @@ builder = "dockerfile"
 [service.quant-engine]
 dockerfilePath = "Dockerfile.quant-engine"
 builder = "dockerfile"
+
+# Redis is added via Railway Dashboard: New → Database → Add Redis
+# Railway automatically injects REDIS_URL into all services
+# No additional configuration needed here
