fix(deploy): force Railway cache bust to deploy latest auth fixes
CRITICAL: Railway was serving stale cached build.
- Increment CACHEBUST to v8
- This forces complete Docker rebuild
- Ensures latest auth cookie fixes are deployed

Related:
- Commit 427fc0e (auth cookie fixes)
- PRODUCTION_AUDIT_REPORT.md
- IMMEDIATE_ACTION_CHECKLIST.md

--- a/Dockerfile.api-gateway
+++ b/Dockerfile.api-gateway
@@ -6,8 +6,8 @@ RUN corepack enable
 # Install curl for healthcheck
 RUN apk add --no-cache curl
 
-# FORCE NEW BUILD LAYER - v7
-ARG CACHEBUST=7
+# FORCE NEW BUILD LAYER - v8 (2026-01-14: Force rebuild after cookie fixes)
+ARG CACHEBUST=8
 
 COPY . .
 
